--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.6"
+    "vite": "^4.4.6",
+    "vue-router": "^4.2.4"
   }
 }
